--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "jquery": "3.4.1",
     "bootstrap": "^4.1.1",
     "popper.js": "^1.11.0"
+  },
+  "dependencies": {
+    "chosen-js": "^1.8.7"
   }
 }
