--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+foodics.json
+instagram_gkdemy/
+package-lock.json
+public/photos/
+
