--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "popper.js": "^1.11.0"
   },
   "dependencies": {
-    "chosen-js": "^1.8.7"
+    "chosen-js": "^1.8.7",
+    "jquery-toast-plugin": "^1.3.2"
   }
 }
