--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/ui": "^1.1",
         "unisharp/laravel-filemanager": "~1.8",
         "yajra/laravel-datatables": "^1.5",
-        "yajra/laravel-datatables-oracle": "^9.7"
+        "yajra/laravel-datatables-oracle": "^9.7",
+        "zircote/swagger-php": "2.*"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
